Apply new changes for Application
1) Add support for districts in NN.
2) Add support for adding feedback.
3) Update API endpoing with new address.
4) Remove unused file
5) Update .gitignore files to exclude certain files in working directory

--- a/app/src/main/res/layout/card_captioned_image.xml
+++ b/app/src/main/res/layout/card_captioned_image.xml
@@ -69,11 +69,11 @@
             android:layout_marginBottom="8dp"
             android:contentDescription="@string/favorites_added"
             android:src="@drawable/twotone_star_black_36"
-            android:tint="#2a5885"
             app:layout_constraintBottom_toTopOf="@+id/advertText"
             app:layout_constraintEnd_toStartOf="@+id/photosIcon"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            app:tint="#2a5885" />
 
         <TextView
             android:id="@+id/newAdvert"
