--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,7 +46,8 @@
                 android:clickable="false"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         </RelativeLayout>
 
@@ -146,11 +147,53 @@
             android:text="@string/room"
             android:textSize="15sp"
             android:translationX="-5dp"
-            app:layout_constraintBottom_toTopOf="@+id/edtInput"
+            app:layout_constraintBottom_toTopOf="@+id/districtLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/apartmentCheckbox" />
+
+        <RelativeLayout
+            android:id="@+id/districtLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/spinner_border"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/edtInput"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/roomCheckbox">
+
+            <TextView
+                android:id="@+id/district_select"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="24dp"
+                android:spinnerMode="dialog"
+                android:textSize="15sp"
+                tools:ignore="RelativeOverlap" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="4dp"
+                android:contentDescription="@string/drop_down_description"
+                app:srcCompat="@drawable/outline_arrow_drop_down_24" />
+
+        </RelativeLayout>
 
 
         <EditText
