Add some changes according to 23 realized version
- Fix issue with empty other feedback
- Update libraries
- Update user interface for settings

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -63,7 +63,7 @@
             android:orientation="horizontal"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            app:layout_constraintBottom_toTopOf="@+id/rentInCheckbox"
+            app:layout_constraintBottom_toTopOf="@+id/settingsText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/notificationsLayout">
@@ -91,6 +91,22 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/settingsText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/settings_text"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/rentInCheckbox"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cityLayout"
+            app:layout_constraintVertical_bias="0.0" />
+
         <CheckBox
             android:id="@+id/rentInCheckbox"
             android:layout_width="wrap_content"
@@ -104,7 +120,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cityLayout"
+            app:layout_constraintTop_toBottomOf="@+id/settingsText"
             app:layout_constraintVertical_bias="0.0" />
 
         <CheckBox
